syntax = "proto3";

package com.example.domain;

option java_multiple_files = false;
option java_package = "com.example.domain.grpc";
option java_outer_classname = "EmployeeProto";

message Employee {
  string id = 1;
  string name = 2;
  string position = 3;
  double salary = 4;
  string hireDate = 5;
}

message EmployeeRequest {
  string id = 1;
}

message EmployeeResponse {
  Employee employee = 1;
}

message EmployeeListResponse {
  repeated Employee employees = 1;
}

message Empty {}

service EmployeeService {
  rpc GetEmployee(EmployeeRequest) returns (EmployeeResponse);
  rpc ListEmployees(Empty) returns (EmployeeListResponse);

  rpc CreateEmployee(Employee) returns (Empty);
  rpc UpdateEmployee(Employee) returns (Empty);
  rpc DeleteEmployee(EmployeeRequest) returns (Empty);
}